# groq-mcp-server

./: .gitkeep  README.md  pyproject.toml  server.py
scripts/: groq_compound.sh
src/: groq_compound.py  groq_stt.py  groq_tts.py  groq_ttt.py  groq_vision.py  utils.py
tests/: conftest.py  test_batch.py  test_tts.py
